line_array now accepts start/stop arguments, does not iterate through empty lines. Still need to pick anchors well outside of image, so we don't miss any trenches in a rotated image.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171122 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171122 Prototyping.ipynb
@@ -442,7 +442,7 @@
     "    # plt.plot(trench_profiles)\n",
     "\n",
     "\n",
-    "detect_trenches2(img_labels == 1)"
+    "# detect_trenches2(img_labels == 1)"
    ]
   },
   {
@@ -492,13 +492,18 @@
     "    angle2 = theta2[theta_idx2]\n",
     "    d_profile = h2[:, theta_idx2].astype(np.int32)\n",
     "    freqs = np.abs(np.fft.fft(d_profile))\n",
-    "    peak_idxs = peakutils.indexes(d_profile, thres=0.4)\n",
+    "    peak_idxs = peakutils.indexes(d_profile, thres=0.4, min_dist=5)\n",
     "    peaks = d2[peak_idxs]\n",
     "    spacing = scipy.stats.mode(np.diff(peaks)).mode[0]\n",
     "    return angle2, peaks\n",
     "\n",
     "\n",
-    "def line_array(anchors, theta, x_lim, y_lim):\n",
+    "def get_rough_spacing(dists):\n",
+    "    spacing = scipy.stats.mode(np.diff(dists).astype(int)).mode[0]\n",
+    "    return spacing\n",
+    "\n",
+    "\n",
+    "def line_array(anchors, theta, x_lim, y_lim, length=None):\n",
     "    for anchor in anchors:\n",
     "        x0 = anchor\n",
     "        if -3 / 4 * np.pi < theta < np.pi / 4:\n",
@@ -519,7 +524,25 @@
     "def point_linspace(anchor0, anchor1, N):\n",
     "    for s in np.linspace(0, 1, N)[1:-1]:\n",
     "        anchor = (1 - s) * anchor0 + s * anchor1\n",
-    "        yield anchor"
+    "        yield anchor\n",
+    "\n",
+    "\n",
+    "def get_anchors(theta, x_lim, y_lim):\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if 0 <= (theta % np.pi) < np.pi / 4 or 3 / 4 * np.pi <= (theta % np.pi) < np.pi:\n",
+    "        y0 = (y_max - y_min) / 2 + y_min\n",
+    "        dy = (x_max - x_min) / 2 * np.tan(theta)\n",
+    "        anchor0 = np.array([x_min, y0 - dy])\n",
+    "        anchor1 = np.array([x_max, y0 + dy])\n",
+    "    return anchor0, anchor1\n",
+    "\n",
+    "\n",
+    "def coords_along(x0, x1):\n",
+    "    length = int(np.sqrt(np.sum((x1 - x0) ** 2)))\n",
+    "    xs = np.linspace(x0[0], x1[0], length).astype(np.int_)[1:-1]\n",
+    "    ys = np.linspace(x0[1], x1[1], length).astype(np.int_)[1:-1]\n",
+    "    return xs, ys"
    ]
   },
   {
@@ -528,37 +551,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def refine_trenches(img, theta, spacing):\n",
+    "    x_min = y_min = 0\n",
+    "    x_max, y_max = img.shape\n",
+    "    x_lim = (x_min, x_max)\n",
+    "    y_lim = (y_min, y_max)\n",
+    "    anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
+    "    trench_profiles = []\n",
+    "    for x0, x1 in line_array(\n",
+    "        point_linspace(anchor0, anchor1, 100), theta, x_lim, y_lim\n",
+    "    ):\n",
+    "        xs, ys = coords_along(x0, x1)\n",
+    "        trench_profiles.append(img[ys, xs])\n",
+    "\n",
+    "\n",
+    "def line_array(anchors, theta, x_lim, y_lim, start=None, stop=None):\n",
+    "    if start is None:\n",
+    "        start = 0\n",
+    "    if stop is None:\n",
+    "        stop = 0\n",
+    "    if not stop >= start >= 0:\n",
+    "        raise ValueError(\"need stop >= start >= 0\")\n",
+    "    for anchor in anchors:\n",
+    "        x0 = anchor\n",
+    "        if -3 / 4 * np.pi < theta < np.pi / 4:\n",
+    "            x, y = x_min, y_min\n",
+    "            angle_to_corner = np.arctan2(-anchor[0], anchor[1])\n",
+    "        else:\n",
+    "            x, y = x_max, y_max\n",
+    "            angle_to_corner = -np.arctan2(anchor[0] - x_max, -(y_max - anchor[1]))\n",
+    "        if angle_to_corner < theta:\n",
+    "            # endpoint at top/bottom\n",
+    "            x1 = np.array([anchor[0] + (anchor[1] - y) * np.tan(theta), y])\n",
+    "            # length = (anchor[1] - y)/np.cos(theta)\n",
+    "            # x1 = np.array([anchor[0] + length*np.sin(theta), y])\n",
+    "        else:\n",
+    "            # endpoint on side\n",
+    "            x1 = np.array([x, anchor[1] + (anchor[0] - x) / np.tan(theta)])\n",
+    "        max_length = np.sqrt(((x1 - x0) ** 2).sum())\n",
+    "        y0, y1 = x0, x1\n",
+    "        if start:\n",
+    "            y0 = min(start / max_length, 1) * (x1 - x0) + x0\n",
+    "        if stop:\n",
+    "            y1 = min(stop / max_length, 1) * (x1 - x0) + x0\n",
+    "        if not np.array_equal(y0, y1):\n",
+    "            yield y0, y1\n",
+    "\n",
+    "\n",
     "img = skimage.transform.rotate(f1, 15, cval=0)\n",
     "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
     "img_labels = label_binary_image(img_thresh)\n",
-    "theta, peaks = detect_trenches(img_labels == 1)\n",
+    "theta, dists = detect_trenches(img_labels == 1)\n",
+    "spacing = get_rough_spacing(dists)\n",
+    "# anchors\n",
     "x_min = y_min = 0\n",
-    "x_max, y_max = label_img_rot.shape\n",
+    "x_max, y_max = img.shape\n",
     "x_lim = (x_min, x_max)\n",
     "y_lim = (y_min, y_max)\n",
+    "anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
     "plt.figure(figsize=(12, 12))\n",
     "plt.imshow(img)\n",
-    "if 0 <= (theta % np.pi) < np.pi / 4 or 3 / 4 * np.pi <= (theta % np.pi) < np.pi:\n",
-    "    y0 = (y_max - y_min) / 2 + y_min\n",
-    "    dy = (x_max - x_min) / 2 * np.tan(theta)\n",
-    "    anchor0 = np.array([x_min, y0 - dy])\n",
-    "    anchor1 = np.array([x_max, y0 + dy])\n",
     "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
     "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
     "trench_profiles = []\n",
-    "for x0, x1 in line_array(point_linspace(anchor0, anchor1, 100), theta, x_lim, y_lim):\n",
+    "for x0, x1 in line_array(\n",
+    "    point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0]) // spacing)),\n",
+    "    theta,\n",
+    "    x_lim,\n",
+    "    y_lim,\n",
+    "    start=500,\n",
+    "    stop=700,\n",
+    "):\n",
+    "    xs, ys = coords_along(x0, x1)\n",
+    "    trench_profiles.append(img[ys, xs])\n",
     "    line = np.vstack((x0, x1)).T\n",
     "    plt.plot(*line, color=\"w\")\n",
     "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
     "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
-    "    # processing\n",
-    "    length = int(np.sqrt(np.sum((x1 - x0) ** 2)))\n",
-    "    xs = np.linspace(x0[0], x1[0], length).astype(np.int_)[1:-1]\n",
-    "    ys = np.linspace(x0[1], x1[1], length).astype(np.int_)[1:-1]\n",
-    "    trench_profiles.append(img[ys, xs])\n",
     "plt.figure(figsize=(12, 12))\n",
     "for trench_profile in trench_profiles:\n",
     "    plt.plot(trench_profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = ((dists - dists[:, np.newaxis]) % 24.001).flat\n",
+    "plt.hist(x, bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.diff(dists), bins=50)"
    ]
   },
   {
