get_anchors now works between 0 and 2pi. Probably needs refinement. Added bidirectional line_arrays.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171123 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171123 Prototyping.ipynb
@@ -234,16 +234,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "f01 = frames_z[0, 1, :].max(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "f1 = f0 - np.percentile(f0, 0.5, axis=1)[:, np.newaxis]"
    ]
   },
@@ -301,148 +291,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f2 = f1 > skimage.filters.threshold_otsu(f1)\n",
-    "# f2 = skimage.morphology.convex_hull_object(f2)\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(f2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = np.array(np.where(f2)).T\n",
-    "X2 = StandardScaler().fit_transform(X.astype(np.float32))\n",
-    "fit = sklearn.cluster.MiniBatchKMeans(\n",
-    "    init=\"k-means++\", n_clusters=2, n_init=10, max_no_improvement=10, verbose=0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "fit.fit(X2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_img = np.zeros_like(f1)\n",
-    "for i in range(len(fit.labels_)):\n",
-    "    label_img[X[i, 0], X[i, 1]] = fit.labels_[i] + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counter = Counter(fit.labels_)\n",
-    "total = sum(counter.values())\n",
-    "good_labels = []\n",
-    "for label, count in counter.items():\n",
-    "    print(count / total)\n",
-    "    if count / total > 0.01:\n",
-    "        good_labels.append(label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good_labels"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Trench detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_img_rot = skimage.transform.rotate(label_img, 15, cval=0)  # , resize=True)\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(label_img_rot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def detect_trenches2(thresholded_img):\n",
-    "    h, theta, d = skimage.transform.hough_line(thresholded_img)\n",
-    "    abs_diff_h = np.diff(h.astype(np.int32), axis=1).var(axis=0)\n",
-    "    theta_idx = abs_diff_h.argmax()\n",
-    "    angle1 = theta[theta_idx]\n",
-    "    h2, theta2, d2 = skimage.transform.hough_line(\n",
-    "        thresholded_img, theta=np.linspace(0.9 * angle1, 1.1 * angle1, 200)\n",
-    "    )\n",
-    "    abs_diff_h2 = np.diff(h2.astype(np.int32), axis=1).var(axis=0)\n",
-    "    theta_idx2 = abs_diff_h2.argmax()\n",
-    "    angle2 = theta2[theta_idx2]\n",
-    "    d_profile = h2[:, theta_idx2].astype(np.int32)\n",
-    "    # plt.figure(figsize=(8,8))\n",
-    "    # plt.imshow(h, aspect=0.1)\n",
-    "    # plt.plot(d_profile[3000:3300])\n",
-    "    # plt.figure(figsize=(8,8))\n",
-    "    freqs = np.abs(np.fft.fft(d_profile))\n",
-    "    # plt.plot(freqs)\n",
-    "    peak_idxs = peakutils.indexes(d_profile, thres=0.4)\n",
-    "    peaks = d2[peak_idxs]\n",
-    "    spacing = scipy.stats.mode(np.diff(peaks)).mode[0]\n",
-    "    # print(spacing)\n",
-    "    # print(peaks[0], peaks[-1], angle2)\n",
-    "    # return angle2, peaks\n",
-    "    plt.figure(figsize=(20, 12))\n",
-    "    plt.imshow(thresholded_img)\n",
-    "    angle = angle2\n",
-    "    y_min = 0\n",
-    "    y_max = thresholded_img.shape[1]\n",
-    "    # peak0 = peaks[0]\n",
-    "    # peak1 = peaks[-1]\n",
-    "    # peaks = np.linspace(peak0, peak1, (peak1-peak0) // spacing-2)\n",
-    "    # trench_profiles = []\n",
-    "    for dist in peaks:\n",
-    "        # print(angle, dist)\n",
-    "        y0 = (dist - y_min * np.cos(angle)) / np.sin(angle)\n",
-    "        y1 = (dist - y_max * np.cos(angle)) / np.sin(angle)\n",
-    "        plt.plot((0, y_max), (y0, y1), \"-r\")\n",
-    "    #    length = int(np.hypot(y_max - 0, y1 - y0))\n",
-    "    #    xs = np.linspace(0, y_max-1, length).astype(np.int)\n",
-    "    #    ys = np.linspace(y0, y1-1, length).astype(np.int)\n",
-    "    #    #trench_profiles.append(img[xs, ys])\n",
-    "    plt.xlim((0, thresholded_img.shape[1]))\n",
-    "    plt.ylim((thresholded_img.shape[0], 0))\n",
-    "    # plt.figure(figsize=(8,8))\n",
-    "    # plt.plot(trench_profiles)\n",
-    "\n",
-    "\n",
-    "# detect_trenches2(img_labels == 1)"
    ]
   },
   {
@@ -509,17 +361,6 @@
     "        yield anchor\n",
     "\n",
     "\n",
-    "def get_anchors(theta, x_lim, y_lim):\n",
-    "    x_min, x_max = x_lim\n",
-    "    y_min, y_max = y_lim\n",
-    "    if 0 <= (theta % np.pi) < np.pi / 4 or 3 / 4 * np.pi <= (theta % np.pi) < np.pi:\n",
-    "        y0 = (y_max - y_min) / 2 + y_min\n",
-    "        dy = (x_max - x_min) / 2 * np.tan(theta)\n",
-    "        anchor0 = np.array([x_min, y0 - dy])\n",
-    "        anchor1 = np.array([x_max, y0 + dy])\n",
-    "    return anchor0, anchor1\n",
-    "\n",
-    "\n",
     "def coords_along(x0, x1):\n",
     "    length = int(np.sqrt(np.sum((x1 - x0) ** 2)))\n",
     "    xs = np.linspace(x0[0], x1[0], length).astype(np.int_)[1:-1]\n",
@@ -533,13 +374,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def line_array(anchors, theta, x_lim, y_lim, start=None, stop=None):\n",
+    "def line_array(\n",
+    "    anchors, theta, x_lim, y_lim, start=None, stop=None, bidirectional=False\n",
+    "):\n",
+    "    if bidirectional:\n",
+    "        line_array1 = line_array(\n",
+    "            anchors, theta, x_lim, y_lim, start=start, stop=stop, bidirectional=False\n",
+    "        )\n",
+    "        line_array2 = line_array(\n",
+    "            anchors,\n",
+    "            theta + np.pi,\n",
+    "            x_lim,\n",
+    "            y_lim,\n",
+    "            start=start,\n",
+    "            stop=stop,\n",
+    "            bidirectional=False,\n",
+    "        )\n",
+    "        for (x0, x1), (y0, y1) in zip(line_array1, line_array2):\n",
+    "            yield x1, y1\n",
+    "        return\n",
     "    if start is None:\n",
     "        start = 0\n",
     "    if stop is None:\n",
     "        stop = 0\n",
     "    if not stop >= start >= 0:\n",
     "        raise ValueError(\"need stop >= start >= 0\")\n",
+    "    # TODO: standardize 0 < theta < 2pi\n",
     "    for anchor in anchors:\n",
     "        x0 = anchor\n",
     "        if -3 / 4 * np.pi < theta < np.pi / 4:\n",
@@ -592,30 +452,58 @@
     "    offsets = np.linspace(0, 1.2 * spacing, 20)\n",
     "\n",
     "\n",
-    "img = skimage.transform.rotate(f1, 15, cval=0)\n",
-    "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
-    "img_labels = label_binary_image(img_thresh)\n",
-    "theta, dists = detect_trenches(img_labels == 1)\n",
-    "spacing = get_rough_spacing(dists)\n",
+    "def get_anchors(theta, x_lim, y_lim):\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if 0 <= (theta % np.pi) < np.pi / 4 or 3 / 4 * np.pi <= (theta % np.pi) < np.pi:\n",
+    "        y0 = (y_max - y_min) / 2 + y_min\n",
+    "        dy = (x_max - x_min) / 2 * np.tan(theta)\n",
+    "        anchor0 = np.array([x_min, y0 - dy])\n",
+    "        anchor1 = np.array([x_max, y0 + dy])\n",
+    "    else:\n",
+    "        x0 = (x_max - x_min) / 2 + x_min\n",
+    "        dx = (y_max - y_min) / 2 / np.tan(theta)\n",
+    "        anchor0 = np.array([x0 - dx, y_min])\n",
+    "        anchor1 = np.array([x0 + dx, y_max])\n",
+    "    print((theta % (2 * np.pi)) / np.pi)\n",
+    "    if 3 / 4 * np.pi <= (theta % (2 * np.pi)) < 7 / 4 * np.pi:\n",
+    "        print(True)\n",
+    "        anchor0, anchor1 = anchor1, anchor0\n",
+    "    return anchor0, anchor1\n",
+    "\n",
+    "\n",
+    "# img = skimage.transform.rotate(f1, 15, cval=0)\n",
+    "# img_thresh = img > skimage.filters.threshold_otsu(img)\n",
+    "# img_labels = label_binary_image(img_thresh)\n",
+    "# theta, dists = detect_trenches(img_labels == 1)\n",
+    "# spacing = get_rough_spacing(dists)\n",
+    "##########\n",
     "# anchors\n",
     "x_min = y_min = 0\n",
     "x_max, y_max = img.shape\n",
     "x_lim = (x_min, x_max)\n",
     "y_lim = (y_min, y_max)\n",
-    "anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
+    "anchor_theta = theta + np.pi / 2\n",
+    "anchor_theta = np.pi / 4 + 1.5 + 0.2 + 3 + 0.3\n",
+    "anchor0, anchor1 = get_anchors(anchor_theta, x_lim, y_lim)\n",
     "plt.figure(figsize=(12, 12))\n",
     "plt.imshow(img)\n",
     "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
     "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
+    "print(anchor0, anchor1)\n",
+    "0 / 0\n",
     "trench_profiles = []\n",
-    "for x0, x1 in line_array(\n",
+    "# lines = line_array(point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0])//spacing)), theta, x_lim, y_lim, start=500, stop=700)\n",
+    "lines = line_array(\n",
     "    point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0]) // spacing)),\n",
     "    theta,\n",
     "    x_lim,\n",
     "    y_lim,\n",
     "    start=500,\n",
     "    stop=700,\n",
-    "):\n",
+    "    bidirectional=True,\n",
+    ")\n",
+    "for x0, x1 in lines:\n",
     "    xs, ys = coords_along(x0, x1)\n",
     "    trench_profiles.append(img[ys, xs])\n",
     "    line = np.vstack((x0, x1)).T\n",
@@ -625,117 +513,6 @@
     "plt.figure(figsize=(12, 12))\n",
     "for trench_profile in trench_profiles:\n",
     "    plt.plot(trench_profile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = ((dists - dists[:, np.newaxis]) % 24.001).flat\n",
-    "plt.hist(x, bins=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(np.diff(dists), bins=50)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kt = k2 > 0.5 * skimage.filters.threshold_otsu(k2)\n",
-    "plt.figure(figsize=(20, 12))\n",
-    "plt.imshow(kt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kt = k1 > 0.5 * skimage.filters.threshold_otsu(k1)\n",
-    "plt.figure(figsize=(20, 12))\n",
-    "plt.imshow(kt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rough trench finding using linear hough on thresholded k2 or thresholded intensity (?)\n",
-    "# oval hough transform to find cells"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(skimage.measure.label(1 - kt))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skimage.measure.label(1 - kt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_timesteps = a_stack.shape[1]\n",
-    "play = widgets.Play(\n",
-    "    # interval=10,\n",
-    "    value=0,\n",
-    "    min=0,\n",
-    "    max=num_timesteps,\n",
-    "    step=1,\n",
-    "    description=\"Press play\",\n",
-    "    disabled=False,\n",
-    ")\n",
-    "time_slider = widgets.IntSlider(min=0, max=num_timesteps, continuous_update=False)\n",
-    "widgets.jslink((play, \"value\"), (time_slider, \"value\"))\n",
-    "output = widgets.Output()\n",
-    "box = widgets.VBox([widgets.HBox([play, time_slider]), output])\n",
-    "\n",
-    "\n",
-    "def f(t):\n",
-    "    with output:\n",
-    "        z = hessian_eigenvalues(a_stack[0, t])[0]\n",
-    "        clear_output(wait=True)\n",
-    "        plt.figure(figsize=(20, 12))\n",
-    "        plt.imshow(z)\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
-    "interactive(f, t=time_slider)\n",
-    "box"
    ]
   },
   {
