--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
@@ -365,7 +365,27 @@
     "    length = int(np.sqrt(np.sum((x1 - x0) ** 2)))\n",
     "    xs = np.linspace(x0[0], x1[0], length).astype(np.int_)[1:-1]\n",
     "    ys = np.linspace(x0[1], x1[1], length).astype(np.int_)[1:-1]\n",
-    "    return xs, ys"
+    "    return xs, ys\n",
+    "\n",
+    "\n",
+    "def edge_point2(x0, theta, x_lim, y_lim):\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if 0 <= theta < np.pi / 4 or 5 / 4 * np.pi <= 2 * np.pi:\n",
+    "        x, y = x_min, y_min\n",
+    "        angle_to_corner = np.arctan2(-x0[0], x0[1])\n",
+    "    else:\n",
+    "        x, y = x_max, y_max\n",
+    "        angle_to_corner = -np.arctan2(x0[0] - x_max, -(y_max - x0[1]))\n",
+    "    angle_to_corner = angle_to_corner % (2 * np.pi)\n",
+    "    print(\"corner angle\", angle_to_corner, theta)\n",
+    "    if angle_to_corner < theta:\n",
+    "        # endpoint at top/bottom\n",
+    "        x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
+    "    else:\n",
+    "        # endpoint on side\n",
+    "        x1 = np.array([x, x0[1] + (x0[0] - x) / np.tan(theta)])\n",
+    "    return x1"
    ]
   },
   {
@@ -392,30 +412,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.arctan2(-1, 1) % (np.pi * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def edge_point(x0, theta, x_lim, y_lim):\n",
     "    x_min, x_max = x_lim\n",
     "    y_min, y_max = y_lim\n",
-    "    if 0 <= theta < np.pi / 4 or 5 / 4 * np.pi <= 2 * np.pi:\n",
-    "        x, y = x_min, y_min\n",
-    "        angle_to_corner = np.arctan2(-x0[0], x0[1])\n",
-    "    else:\n",
+    "    theta = theta % (2 * np.pi)\n",
+    "    if 0 <= theta < np.pi / 2:  # or 5/4*np.pi <= 2*np.pi:\n",
+    "        x, y = x_min, y_max\n",
+    "        angle_to_corner = np.arctan2(x0[0], y_max - x0[1])\n",
+    "        print(\"atc\", angle_to_corner)\n",
+    "        if angle_to_corner <= theta:\n",
+    "            # endpoint at top/bottom\n",
+    "            x1 = np.array([x0[0] + (x0[1] - y) / np.tan(theta), y])\n",
+    "        else:\n",
+    "            # endpoint on side\n",
+    "            x1 = np.array([x, x0[1] + (x0[0] - x) * np.tan(theta)])\n",
+    "    elif np.pi / 2 <= theta < np.pi:\n",
     "        x, y = x_max, y_max\n",
-    "        angle_to_corner = -np.arctan2(x0[0] - x_max, -(y_max - x0[1]))\n",
-    "    angle_to_corner = angle_to_corner % (2 * np.pi)\n",
-    "    print(\"corner angle\", angle_to_corner, theta)\n",
-    "    if angle_to_corner < theta:\n",
-    "        # endpoint at top/bottom\n",
-    "        x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
-    "    else:\n",
-    "        # endpoint on side\n",
-    "        x1 = np.array([x, x0[1] + (x0[0] - x) / np.tan(theta)])\n",
+    "        angle_to_corner = np.arctan2(-(x0[0] - x_max), -(y_max - x0[1]))\n",
+    "        print(\"atc\", angle_to_corner)\n",
+    "        if angle_to_corner > theta:\n",
+    "            # endpoint at top/bottom\n",
+    "            x1 = np.array([x0[0] + (x0[1] - y) / np.tan(theta), y])\n",
+    "        else:\n",
+    "            # endpoint on side\n",
+    "            x1 = np.array([x, x0[1] + (x0[0] - x) * np.tan(theta)])\n",
+    "    elif np.pi <= theta < 3 / 2 * np.pi:\n",
+    "        x, y = x_max, y_min\n",
+    "        angle_to_corner = np.arctan2((x0[0] - x_max), y_min - x0[1]) % (2 * np.pi)\n",
+    "        print(\"atc\", angle_to_corner)\n",
+    "        if angle_to_corner > theta:\n",
+    "            # endpoint at top/bottom\n",
+    "            x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
+    "        else:\n",
+    "            # endpoint on side\n",
+    "            x1 = np.array([x, x0[1] + (x0[0] - x) / np.tan(theta)])\n",
+    "    elif 3 / 2 * np.pi <= theta <= 2 * np.pi:\n",
+    "        x, y = x_min, y_min\n",
+    "        angle_to_corner = np.arctan2((x_min - x0[0]), x0[1] - y_min) % (2 * np.pi)\n",
+    "        print(\"atc\", angle_to_corner)\n",
+    "        if angle_to_corner <= theta:\n",
+    "            # endpoint at top/bottom\n",
+    "            x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
+    "        else:\n",
+    "            # endpoint on side\n",
+    "            x1 = np.array([x, x0[1] + (x0[0] - x) / np.tan(theta)])\n",
+    "    # elif np.pi/2 <= theta < np.pi:\n",
+    "    #    x, y = x_max, y_max\n",
+    "    #    angle_to_corner = np.arctan2(x_max-x0[0], x0[1])\n",
+    "    # if 0 <= theta < np.pi:\n",
+    "    #    print('atc', angle_to_corner, theta)\n",
+    "    #    if angle_to_corner < theta:\n",
+    "    #        # endpoint at top/bottom\n",
+    "    #        x1 = np.array([x, x0[1] + (x0[0] - x)/np.tan(theta)])\n",
+    "    #    else:\n",
+    "    # endpoint on side\n",
+    "    #        x1 = np.array([x0[0] + (x0[1] - y)*np.tan(theta), y])\n",
+    "    # else:\n",
+    "    #    x1 = x0 + np.array([0,10])\n",
+    "    # else:\n",
+    "    #    x, y = x_max, y_max\n",
+    "    #    angle_to_corner = -np.arctan2(x0[0]-x_max, -(y_max-x0[1]))\n",
+    "    # angle_to_corner = angle_to_corner % (2*np.pi)\n",
+    "    # print('corner angle', angle_to_corner, theta)\n",
+    "    # if angle_to_corner < theta:\n",
+    "    # endpoint at top/bottom\n",
+    "    #    x1 = np.array([x0[0] + (x0[1] - y)*np.tan(theta), y])\n",
+    "    # else:\n",
+    "    # endpoint on side\n",
+    "    #    x1 = np.array([x, x0[1] + (x0[0] - x)/np.tan(theta)])\n",
     "    return x1\n",
     "\n",
     "\n",
     "x0 = np.array([1024, 1024])\n",
     "plt.figure(figsize=(12, 12))\n",
     "plt.gca().add_artist(plt.Circle(x0, 10, color=\"g\", zorder=2))\n",
-    "for i, theta in enumerate(np.linspace(0, 2 * np.pi, 10)):\n",
+    "for i, theta in enumerate(np.linspace(0, 2 * np.pi, 50)):\n",
+    "    # for i, theta in enumerate([0, np.pi/4-.01, np.pi/4+.01]):\n",
     "    x1 = edge_point(x0, theta, x_lim, y_lim)\n",
     "    print(theta, x1)\n",
     "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
