Replaced get_anchors with a call to edge_point. This changes the convention for theta, note that imshow flips the y axis.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
@@ -368,119 +368,6 @@
     "    return xs, ys\n",
     "\n",
     "\n",
-    "def edge_point2(x0, theta, x_lim, y_lim):\n",
-    "    x_min, x_max = x_lim\n",
-    "    y_min, y_max = y_lim\n",
-    "    if 0 <= theta < np.pi / 4 or 5 / 4 * np.pi <= 2 * np.pi:\n",
-    "        x, y = x_min, y_min\n",
-    "        angle_to_corner = np.arctan2(-x0[0], x0[1])\n",
-    "    else:\n",
-    "        x, y = x_max, y_max\n",
-    "        angle_to_corner = -np.arctan2(x0[0] - x_max, -(y_max - x0[1]))\n",
-    "    angle_to_corner = angle_to_corner % (2 * np.pi)\n",
-    "    print(\"corner angle\", angle_to_corner, theta)\n",
-    "    if angle_to_corner < theta:\n",
-    "        # endpoint at top/bottom\n",
-    "        x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
-    "    else:\n",
-    "        # endpoint on side\n",
-    "        x1 = np.array([x, x0[1] + (x0[0] - x) / np.tan(theta)])\n",
-    "    return x1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(-np.pi / 4) % (2 * np.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.arctan2(-1, 1) % (np.pi * 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def edge_point2(x0, theta, x_lim, y_lim):\n",
-    "    x_min, x_max = x_lim\n",
-    "    y_min, y_max = y_lim\n",
-    "    theta = theta % (2 * np.pi)\n",
-    "    if 0 <= theta < np.pi / 2:\n",
-    "        x, y = x_min, y_max\n",
-    "        angle_to_corner = np.arctan2(y_max - x0[1], x0[0] - x_min)\n",
-    "        # print('atc', angle_to_corner)\n",
-    "        if angle_to_corner <= theta:\n",
-    "            # endpoint at top/bottom\n",
-    "            x1 = np.array([x0[0] + (x0[1] - y) / np.tan(theta), y])\n",
-    "            # x1 = np.array([0,0])\n",
-    "        else:\n",
-    "            # endpoint on side\n",
-    "            x1 = np.array([x, x0[1] + (x0[0] - x) * np.tan(theta)])\n",
-    "    elif np.pi / 2 <= theta < np.pi:\n",
-    "        x, y = x_max, y_max\n",
-    "        angle_to_corner = np.arctan2(y_max - x0[1], x0[0] - x_max)\n",
-    "        print(\"atc\", angle_to_corner)\n",
-    "        if angle_to_corner > theta:\n",
-    "            # endpoint at top/bottom\n",
-    "            x1 = np.array([x0[0] + (x0[1] - y) / np.tan(theta), y])\n",
-    "        else:\n",
-    "            # endpoint on side\n",
-    "            x1 = np.array([x, x0[1] + (x0[0] - x) * np.tan(theta)])\n",
-    "    elif np.pi <= theta < 3 / 2 * np.pi:\n",
-    "        x, y = x_max, y_min\n",
-    "        angle_to_corner = np.arctan2(y_min - x0[1], x0[0] - x_max) % (2 * np.pi)\n",
-    "        # print('atc', angle_to_corner)\n",
-    "        if angle_to_corner <= theta:\n",
-    "            # endpoint at top/bottom\n",
-    "            x1 = np.array([x0[0] + (x0[1] - y) * np.tan(theta), y])\n",
-    "        else:\n",
-    "            # endpoint on side\n",
-    "            # x1 = np.array([x, x0[1] + (x0[0] - x)/np.tan(theta-np.pi)])\n",
-    "            # print(np.tan(theta), x0[0] - x)\n",
-    "            x1 = np.array([x, x0[1] + (x0[0] - x) * np.tan(theta)])\n",
-    "    elif 3 / 2 * np.pi <= theta <= 2 * np.pi:\n",
-    "        x, y = x_min, y_min\n",
-    "        angle_to_corner = np.arctan2(y_min - x0[1], -(x_min - x0[0])) % (2 * np.pi)\n",
-    "        print(\"atc\", angle_to_corner)\n",
-    "        if angle_to_corner <= theta:\n",
-    "            # endpoint on side\n",
-    "            # x1 = np.array([x0[0] + (x0[1] - y)/np.tan(theta), y])\n",
-    "            print(np.tan(theta), x0[1] - y)\n",
-    "            # x1 = np.array([0,0])\n",
-    "            x1 = np.array([x, x0[1] + (x0[1] - y) * np.tan(theta)])\n",
-    "        else:\n",
-    "            # endpoint at top/bottom\n",
-    "            # x1 = np.array([x, x0[1] + (x0[0] - x)*np.tan(theta)])\n",
-    "            x1 = np.array([0, 0])\n",
-    "    return x1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def edge_point(x0, theta, x_lim, y_lim):\n",
     "    x_min, x_max = x_lim\n",
     "    y_min, y_max = y_lim\n",
@@ -493,10 +380,7 @@
     "        corner_x, corner_y = x_max, y_min\n",
     "    elif 3 / 2 * np.pi <= theta <= 2 * np.pi:\n",
     "        corner_x, corner_y = x_min, y_min\n",
-    "    # angle_to_corner = np.arctan2(corner_y-x0[1], x0[0]-corner_x) % (2*np.pi)\n",
     "    angle_to_corner = np.arctan2(corner_y - x0[1], x0[0] - corner_x) % (2 * np.pi)\n",
-    "    # print('atc', angle_to_corner*180/np.pi)\n",
-    "    # print('$$', (corner_y-x0[1], x0[0]-corner_x))\n",
     "    if (\n",
     "        (theta >= angle_to_corner and 0 <= theta < np.pi / 2)\n",
     "        or (theta < angle_to_corner and np.pi / 2 <= theta < np.pi)\n",
@@ -504,50 +388,11 @@
     "        or (theta < angle_to_corner and 3 / 2 * np.pi <= theta < 2 * np.pi)\n",
     "    ):\n",
     "        # top/bottom\n",
-    "        # print(theta, np.tan(theta), abs(corner_y - x0[1])/np.tan(theta))\n",
     "        x1 = np.array([x0[0] - (corner_y - x0[1]) / np.tan(theta), corner_y])\n",
     "    else:\n",
     "        # left/right\n",
-    "        # x1 = x0\n",
     "        x1 = np.array([corner_x, x0[1] - (corner_x - x0[0]) * np.tan(theta)])\n",
-    "    return x1\n",
-    "\n",
-    "\n",
-    "# x0 = np.array([1024,1024])\n",
-    "# x0 = np.array([524,1024])\n",
-    "x0 = np.array([500, 124])\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.gca().add_artist(plt.Circle(x0, 10, color=\"g\", zorder=2))\n",
-    "for i, theta in enumerate(np.linspace(0, 2 * np.pi, 50)):\n",
-    "    # for i, theta in enumerate(np.linspace(3/2*np.pi, 4/2*np.pi, 50)):\n",
-    "    # for i, theta in enumerate([0, np.pi/4-.01, np.pi/4+.01]):\n",
-    "    x1 = edge_point(x0, theta, x_lim, y_lim)\n",
-    "    # print('>>', theta*180/np.pi, x1)\n",
-    "    line = np.vstack((x0, x1)).T\n",
-    "    plt.plot(*line, color=\"gray\")\n",
-    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
-    "    # plt.gca().text(x1[0], x1[1], 'i:{}'.format(i), fontsize=15)\n",
-    "    # plt.annotate(str(i), xy=tuple(x1), textcoords='data')\n",
-    "plt.xlim(x_lim)\n",
-    "plt.ylim(y_lim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(np.arctan2(-500, -124) * 180 / np.pi) % 360"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(np.arctan2(-124, 500) * 180 / np.pi) % 360"
+    "    return x1"
    ]
   },
   {
@@ -581,19 +426,16 @@
     "        stop = 0\n",
     "    if not stop >= start >= 0:\n",
     "        raise ValueError(\"need stop >= start >= 0\")\n",
-    "    # TODO: standardize 0 < theta < 2pi\n",
-    "    print(\"theta\", theta)\n",
     "    theta = theta % (2 * np.pi)\n",
-    "    print(\"newtheta\", theta)\n",
     "    for anchor in anchors:\n",
     "        x0 = anchor\n",
     "        x1 = edge_point(x0, theta, x_lim, y_lim)\n",
-    "        # max_length = np.sqrt(((x1 - x0)**2).sum())\n",
+    "        max_length = np.sqrt(((x1 - x0) ** 2).sum())\n",
     "        y0, y1 = x0, x1\n",
-    "        # if start:\n",
-    "        #    y0 = min(start / max_length, 1) * (x1 - x0) + x0\n",
-    "        # if stop:\n",
-    "        #    y1 = min(stop / max_length, 1) * (x1 - x0) + x0\n",
+    "        if start:\n",
+    "            y0 = min(start / max_length, 1) * (x1 - x0) + x0\n",
+    "        if stop:\n",
+    "            y1 = min(stop / max_length, 1) * (x1 - x0) + x0\n",
     "        if not np.array_equal(y0, y1):\n",
     "            yield y0, y1\n",
     "\n",
@@ -625,36 +467,57 @@
     "\n",
     "\n",
     "def get_anchors(theta, x_lim, y_lim):\n",
-    "    x_min, x_max = x_lim\n",
-    "    y_min, y_max = y_lim\n",
-    "    if 0 <= (theta % np.pi) < np.pi / 4 or 3 / 4 * np.pi <= (theta % np.pi) < np.pi:\n",
-    "        y0 = (y_max - y_min) / 2 + y_min\n",
-    "        dy = (x_max - x_min) / 2 * np.tan(theta)\n",
-    "        anchor0 = np.array([x_min, y0 - dy])\n",
-    "        anchor1 = np.array([x_max, y0 + dy])\n",
-    "    else:\n",
-    "        x0 = (x_max - x_min) / 2 + x_min\n",
-    "        dx = (y_max - y_min) / 2 / np.tan(theta)\n",
-    "        anchor0 = np.array([x0 - dx, y_min])\n",
-    "        anchor1 = np.array([x0 + dx, y_max])\n",
-    "    if 3 / 4 * np.pi <= (theta % (2 * np.pi)) < 7 / 4 * np.pi:\n",
-    "        anchor0, anchor1 = anchor1, anchor0\n",
-    "    return anchor0, anchor1\n",
-    "\n",
-    "\n",
-    "# img = skimage.transform.rotate(f1, 15, cval=0)\n",
-    "# img_thresh = img > skimage.filters.threshold_otsu(img)\n",
-    "# img_labels = label_binary_image(img_thresh)\n",
-    "# theta, dists = detect_trenches(img_labels == 1)\n",
-    "# spacing = get_rough_spacing(dists)\n",
+    "    x_min = np.array([x_lim[0], y_lim[0]])\n",
+    "    x_max = np.array([x_lim[1], y_lim[1]])\n",
+    "    x0 = x_min + (x_max - x_min) / 2\n",
+    "    anchor0 = edge_point(x0, theta, x_lim, y_lim)\n",
+    "    anchor1 = edge_point(x0, theta + np.pi, x_lim, y_lim)\n",
+    "    return anchor0, anchor1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x0 = np.array([1024,1024])\n",
+    "# x0 = np.array([524,1024])\n",
+    "x0 = np.array([500, 124])\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.gca().add_artist(plt.Circle(x0, 10, color=\"g\", zorder=2))\n",
+    "for i, theta in enumerate(np.linspace(0, 2 * np.pi, 50)):\n",
+    "    # for i, theta in enumerate(np.linspace(3/2*np.pi, 4/2*np.pi, 50)):\n",
+    "    # for i, theta in enumerate([0, np.pi/4-.01, np.pi/4+.01]):\n",
+    "    x1 = edge_point(x0, theta, x_lim, y_lim)\n",
+    "    # print('>>', theta*180/np.pi, x1)\n",
+    "    line = np.vstack((x0, x1)).T\n",
+    "    plt.plot(*line, color=\"gray\")\n",
+    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
+    "    # plt.gca().text(x1[0], x1[1], 'i:{}'.format(i), fontsize=15)\n",
+    "    # plt.annotate(str(i), xy=tuple(x1), textcoords='data')\n",
+    "plt.xlim(x_lim)\n",
+    "plt.ylim(y_lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = skimage.transform.rotate(f1, 15, cval=0)\n",
+    "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
+    "img_labels = label_binary_image(img_thresh)\n",
+    "theta, dists = detect_trenches(img_labels == 1)\n",
+    "spacing = get_rough_spacing(dists)\n",
     "##########\n",
     "# anchors\n",
     "x_min = y_min = 0\n",
     "x_max, y_max = img.shape\n",
     "x_lim = (x_min, x_max)\n",
     "y_lim = (y_min, y_max)\n",
-    "theta2 = 0  # np.pi/2#np.pi/2 + theta\n",
-    "anchor0, anchor1 = get_anchors(theta2, x_lim, y_lim)\n",
+    "anchor0, anchor1 = get_anchors(np.pi / 2 - theta, x_lim, y_lim)\n",
     "plt.figure(figsize=(12, 12))\n",
     "plt.imshow(img)\n",
     "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
@@ -662,8 +525,8 @@
     "trench_profiles = []\n",
     "# lines = line_array(point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0])//spacing)), theta, x_lim, y_lim, start=500, stop=700)\n",
     "lines = line_array(\n",
-    "    point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0]) // spacing)),\n",
-    "    3 * np.pi / 2,\n",
+    "    list(point_linspace(anchor0, anchor1, 40))[5:-5],\n",
+    "    -theta,\n",
     "    x_lim,\n",
     "    y_lim,\n",
     "    bidirectional=False,\n",
